<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, BookMeActivity!</string>
    <string name="app_name">BookMe</string>
    <string name="jezik">Jezik</string>
    <string name="gradivo">Vrsta gradiva:</string>
    <string name="naslov">Naslov:</string>
    <string name="avtor">Avtor:</string>
    <string name="leto">Leto izdaje:</string>
    <string name="dodaj">Dodaj knjigo</string>
    <string name="niz">Iskalni niz:</string>
    <string name="isci">Isci knjige</string>
    <string name="rez">Rezultati:</string>
    <string name="ukaz">Ukaz:</string>
    <string name="and">AND</string>
    <string name="or">OR</string>
    <string name="info">O knjigi:</string>
    <string name="zalozba">Založba:</string>
    <string name="prijava">Prijava</string>
    <string name="username">Username:</string>
    <string name="pass">Password:</string>
    <string name="prija">Login</string>
    <string name="regist">Registracija</string>
    <string name="reg">Register</string>
    <string name="nov">New user</string>

</resources>