<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ozadje" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="11dp"
        android:layout_y="15dp"
        android:text="@string/avtor"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/textGlavni" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="11dp"
        android:layout_y="58dp"
        android:text="@string/naslov"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/textGlavni" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="11dp"
        android:layout_y="101dp"
        android:text="@string/leto"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/textGlavni" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="11dp"
        android:layout_y="143dp"
        android:text="@string/gradivo"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/textGlavni" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="11dp"
        android:layout_y="178dp"
        android:text="@string/jezik"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/textGlavni" />

    <EditText
        android:id="@+id/EditText02"
        android:layout_width="181dp"
        android:layout_height="35dp"
        android:layout_x="111dp"
        android:layout_y="98dp" />

    <EditText
        android:id="@+id/EditText01"
        android:layout_width="181dp"
        android:layout_height="35dp"
        android:layout_x="111dp"
        android:layout_y="61dp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="181dp"
        android:layout_height="35dp"
        android:layout_x="111dp"
        android:layout_y="20dp" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="162dp"
        android:layout_height="38dp"
        android:layout_x="126dp"
        android:layout_y="179dp"
        android:entries="@array/jeziki" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="162dp"
        android:layout_height="38dp"
        android:layout_x="126dp"
        android:layout_y="140dp"
        android:entries="@array/gradivo"
        android:prompt="@array/gradivo" />

    <Button
        android:id="@+id/button1"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_x="99dp"
        android:layout_y="251dp"
        android:text="@string/isci" />

</AbsoluteLayout>