<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ozadje" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="24dp"
        android:layout_y="67dp"
        android:text="@string/avtor"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/textGlavni" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="24dp"
        android:layout_y="100dp"
        android:text="@string/naslov"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/textGlavni" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="24dp"
        android:layout_y="133dp"
        android:text="@string/leto"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/textGlavni" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="24dp"
        android:layout_y="166dp"
        android:text="@string/gradivo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/textGlavni" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="24dp"
        android:layout_y="199dp"
        android:text="@string/jezik"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/textGlavni" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="182dp"
        android:layout_y="70dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="182dp"
        android:layout_y="136dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="182dp"
        android:layout_y="103dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="182dp"
        android:layout_y="169dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="182dp"
        android:layout_y="202dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text" />

    <!--  <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="514dp"
        android:layout_x="0dp"
        android:layout_y="250dp" android:background="@color/textGlavni"
        android:drawSelectorOnTop="true"
        android:fastScrollEnabled="true">

    </ListView>
-->

	<TableLayout
	    android:id="@+id/TableLayout01"
	    android:layout_width="match_parent"
	    android:layout_height="282dp"
	    android:layout_y="245dp"
	    android:stretchColumns="*" >

		<TableRow>
		<ListView android:id="@+id/listView1" android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:layout_x="0dp"
		        android:layout_y="250dp" android:background="@color/textGlavni"
		        android:drawSelectorOnTop="true"
		        android:fastScrollEnabled="true"
		        android:choiceMode="singleChoice">
		    <!-- Preview: listitem=@android:layout/simple_expandable_list_item_2 -->
		</ListView>
		</TableRow>
</TableLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="76dp"
        android:layout_y="11dp"
        android:text="@string/info"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50px"
        android:textStyle="bold" />

</AbsoluteLayout>